--- a/src/main/resources/properties/upload.properties
+++ b/src/main/resources/properties/upload.properties
@@ -13,9 +13,9 @@ image_base_cover=static\\img\\no.jpg
 
 
 
-cos.bucketName=image-1252774288
+cos.bucketName=
 cos.prefix=
 
-cos.region=ap-chengdu
-cos.secretKey=dBt7kIsJahgU8d7Zt36wd9TgjnnmaNSO
-cos.accessKey=AKIDjRArTxSWZ5reI2eCWikeaW9dwBF99RqH
+cos.region=
+cos.secretKey=
+cos.accessKey=
