修改页面在移动端的显示效果； 添加图片下载功能，ps：该功能需要腾讯云关闭防盗链功能

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -25,7 +25,7 @@
 #
 # This is the configuring for logging displayed in the Application Server
 #log4j.logger.javadev=DEBUG
-log4j.rootCategory=info, stdout
+log4j.rootCategory=DEBUG, stdout
 
 #stdout configure
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
