添加相册最后修改时间，最后上传图片的相册置于顶部；修改数据库结构

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -55,3 +55,6 @@ log4j.logger.java.sql.Connection=debug
 log4j.logger.java.sql.Statement=debug
 log4j.logger.java.sql.PreparedStatement=debug
 log4j.logger.java.sql.ResultSet=debug
+
+
+log4j.logger.org.apache.http=ERROR
