修改图片下载服务----使用http请求方式替换cos请求绕过防盗链

--- a/src/main/resources/properties/upload.properties
+++ b/src/main/resources/properties/upload.properties
@@ -13,9 +13,9 @@ image_base_cover=static\\img\\no.jpg
 
 
 
-cos.bucketName=
-cos.prefix=
+cos.bucketName=image-1252774288
+cos.prefix=https://${cos.bucketName}.cos.${cos.region}.myqcloud.com/
 
-cos.region=
-cos.secretKey=
-cos.accessKey=
+cos.region=ap-chengdu
+cos.secretKey=dBt7kIsJahgU8d7Zt36wd9TgjnnmaNSO
+cos.accessKey=AKIDjRArTxSWZ5reI2eCWikeaW9dwBF99RqH
